--- a/src/index.html
+++ b/src/index.html
@@ -1,49 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{ config('app.locale') }}">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	<title>Apptmnt</title>
-
-    <link rel="icon" type="image/png" href="favicon.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
-
-	<!-- @if ENV='dev' -->
-	<link rel="stylesheet" href="styles/main.css">
-	<!-- @endif -->
-	<!-- @if ENV='prod' -->
-	<link rel="stylesheet" href="styles/main.min.css">
-	<!-- @endif -->
-
-	<!-- Fonts -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Apptmnt</title>
+    <!-- Apptmnt Styles -->
+    <link rel="stylesheet" href="index.css">
+    <!-- Fonts -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-	<link href='https://fonts.googleapis.com/css?family=Raleway:400,500,700,300,600,400italic,300italic,700italic,800,900' rel='stylesheet' type='text/css'>
-
-	<!-- @include inc/_meta.html -->
-
-	<!-- @include inc/_favicons.html -->
+    <link href='https://fonts.googleapis.com/css?family=Raleway:400,500,700,300,600,400italic,300italic,700italic,800,900' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<!-- @include inc/_browserhappy.html -->
-
-    <div class="flex-center position-ref full-height">
-        <div class="content">
-            <h1>Welcome to the Appointment Creator!</h1>
-            <h3>Please select a date for your appointment</h3>
-            <input name="apptmnt-date" type="date" placeholder="Choose a date..."><span><i class="fa fa-calendar"></i></span>
-        </div>
+<div class="flex-center position-ref full-height">
+    <div class="content">
+        <h1>Welcome to the Appointment Creator!</h1>
+        <h3>Please select a date for your appointment</h3>
+        <apptmnt></apptmnt>
     </div>
-
-	<!-- @if ENV='dev' -->
-	<script src="scripts/vendor.js"></script>
-	<script src="scripts/main.js"></script>
-	<!-- @endif -->
-	<!-- @if ENV='prod' -->
-	<script src="scripts/vendor.min.js"></script>
-	<script src="scripts/main.min.js"></script>
-	<!-- @endif -->
-
-	<!-- //@include inc/_analytics.html -->
+</div>
+<!-- Scripts -->
+<script src="Apptmnt.js"></script>
 </body>
 </html>
