Change directory name

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     </div>
 </div>
 <!-- Scripts -->
-<script src="Apptmnt.js"></script>
+<script src="Apptmnt.min.js"></script>
+<script src="Apptmnt.min.js.map"></script>
 </body>
 </html>
